force-app/main/default/objects/OrderItem/fields/Adjusted_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Total_Price__c</fullName>
    <description>Current sum of Monthly Payment Final Price for this order product line.</description>
    <label>Adjusted Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>