force-app/main/default/objects/OrderItem/fields/Aggregated_List_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Aggregated_List_Price_Adjustment__c</fullName>
    <label>Aggregated List Price Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>