force-app/main/default/objects/OrderItem/fields/Aggregated_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Aggregated_Price_Adjustment__c</fullName>
    <label>Aggregated Price Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>