force-app/main/default/objects/OrderItem/fields/Calculated_Price__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Price__c</fullName>
    <formula>IF(
ISPICKVAL(Access_Type__c, &quot;Periodic&quot;),
( (UnitPrice*  Quantity  )* Period_In_Months__c ),

IF(
ISPICKVAL(Access_Type__c, &quot;Monthly&quot;),
(UnitPrice*  Quantity * 24),

UnitPrice*  Quantity 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>