force-app/main/default/objects/OrderItem/fields/Change_Action_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Action_Effective_End_Date__c</fullName>
    <label>Change Action Effective End Date</label>
    <type>Date</type>
</CustomField>