force-app/main/default/objects/OrderItem/fields/Change_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Action_Type__c</fullName>
    <label>Change Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Cahnged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>