force-app/main/default/objects/OrderItem/fields/Changed_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Changed_Access_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Set true on new OrderItem rows created by past-start access type split (Package Builder, ClickUp 869dk2u53).</description>
    <label>Changed Access Type</label>
    <type>Checkbox</type>
</CustomField>