force-app/main/default/objects/OrderItem/fields/Current_Effective_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Effective_Price__c</fullName>
    <label>Current Effective Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>