force-app/main/default/objects/OrderItem/fields/Early_Exit_Request__c.field-meta.xml
<CustomField>
    <fullName>Early_Exit_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Exit Request</label>
    <type>Checkbox</type>
</CustomField>