force-app/main/default/objects/OrderItem/fields/Is_Line_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Line_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >When true, the line was removed from the Package Builder package view but remains for payments and version history. Null or false means active.</description>
    <label>Line Deleted</label>
    <type>Checkbox</type>
</CustomField>