force-app/main/default/objects/OrderItem/fields/Original_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Price__c</fullName>
    <description>Baseline sum of Monthly Payment Final Price when first calculated; not changed after initial set.</description>
    <label>Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>