force-app/main/default/objects/OrderItem/fields/Period_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Period_In_Months__c</fullName>
    <formula>(YEAR(EndDate) - YEAR(ServiceDate)) * 12 +
(MONTH(EndDate) - MONTH(ServiceDate)) +
(
  (DAY(EndDate) / 
    CASE(MONTH(EndDate),
      1,31, 2, IF(MOD(YEAR(EndDate),4)=0,29,28),
      3,31, 4,30, 5,31, 6,30,
      7,31, 8,31, 9,30, 10,31,
      11,30, 12,31, 0)
  )
  -
  ((DAY(ServiceDate) - 1) /
    CASE(MONTH(ServiceDate),
      1,31, 2, IF(MOD(YEAR(ServiceDate),4)=0,29,28),
      3,31, 4,30, 5,31, 6,30,
      7,31, 8,31, 9,30, 10,31,
      11,30, 12,31, 0)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period In Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>