force-app/main/default/objects/OrderItem/fields/Product_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Name__c</fullName>
    <label>Product Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>