force-app/main/default/objects/OrderItem/fields/Products_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Products_List_Price__c</fullName>
    <formula>IF(
ISPICKVAL(Access_Type__c, &quot;Usage Based&quot;),
0,
IF(
Product_Type__c = &apos;Extra for all products&apos;,
ListPrice,
ListPrice * Quantity
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product&apos;s List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>