force-app/main/default/objects/OrderItem/fields/Recurring_Increase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Increase_Amount__c</fullName>
    <label>Recurring Increase Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>