force-app/main/default/objects/OrderItem/fields/Recurring_Increase_Percent__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Increase_Percent__c</fullName>
    <label>Recurring Increase Percent</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>