force-app/main/default/objects/OrderItem/fields/Remaining_Iterations__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Iterations__c</fullName>
    <label>Remaining Iterations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>