force-app/main/default/objects/OrderItem/fields/Replaced_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replaced Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Replacement Order Products</relationshipLabel>
    <relationshipName>Replacement_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>