force-app/main/default/objects/OrderItem/fields/Show_Financial_Adjustment_Icon__c.field-meta.xml
<CustomField>
    <fullName>Show_Financial_Adjustment_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Package Builder: set when the user saves manual monthly discount/final price (drawer) or saves a desk UnitPrice change on the products grid. Not set by end-date-only monthly rollup recalculations.</description>
    <label>Show Financial Adjustment Icon</label>
    <type>Checkbox</type>
</CustomField>