force-app/main/default/objects/OrderItem/fields/Status_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Status_Order_Item__c</fullName>
    <formula>IF(
    Is_Line_Deleted__c,
    &quot;Over&quot;,

   IF(
    TODAY() &gt; EndDate,
    &quot;Over&quot;,

    IF( 
        AND(TODAY() &gt;= ServiceDate, OR(TODAY() &lt;= EndDate, ISBLANK(EndDate))),
        &quot;Active&quot;,

        IF(
            AND(NOT(ISBLANK(EndDate)), EndDate - TODAY() &lt;= $CustomMetadata.Days__mdt.Delta_Days.Delta_Days__c),
            &quot;Leaving soon&quot;,

            IF(
                ServiceDate - TODAY() &lt;= $CustomMetadata.Days__mdt.Delta_Days.Delta_Days__c,
                &quot;Coming soon&quot;,

                IF(
                    AND(TODAY() &lt;= ServiceDate, ServiceDate - TODAY() &gt; $CustomMetadata.Days__mdt.Delta_Days.Delta_Days__c),
                    &quot;Incoming&quot;,

                    IF(
                        AND(TODAY() &gt;= ServiceDate, ISBLANK(EndDate)),
                        &quot;Active&quot;,

                        &quot;Status Unknown&quot;
                    )
                )
            )
        )
    )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Order Item</label>
    <type>Text</type>
</CustomField>