force-app/main/default/objects/OrderItem/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price - Competitors</fullName>
            </value>
            <value>
                <fullName>⁠Reduction/End of Company Activities</fullName>
            </value>
            <value>
                <fullName>Merger with Another Company</fullName>
            </value>
            <value>
                <fullName>⁠Transition to Independent Leasing</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction</fullName>
            </value>
            <value>
                <fullName>Optimization Process</fullName>
            </value>
            <value>
                <fullName>Temporary Contract / Mediation</fullName>
            </value>
            <value>
                <fullName>No Relevant Solution for New Needs (Location/Mix/Needs)</fullName>
            </value>
            <value>
                <fullName>Company Closed</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Moved To Other Location</fullName>
                <label>Moved to other ROOMS location</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>