force-app/main/default/objects/OrderItem/fields/Total_Calculated_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Calculated_Price__c</fullName>
    <formula>IF(
ISPICKVAL(Access_Type__c, &quot;Periodic&quot;),
( UnitPrice *  Quantity * Period_In_Months__c ) - ((UnitPrice *  Quantity * Period_In_Months__c ) * (-Calculated_Price_Adjustment__c)),

IF(
ISPICKVAL(Access_Type__c, &quot;Monthly&quot;),
(UnitPrice *  Quantity * 24) - ((UnitPrice *  Quantity * 24 ) * (-Calculated_Price_Adjustment__c)),

(UnitPrice *  Quantity) - (UnitPrice *  Quantity * (-Calculated_Price_Adjustment__c))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Calculated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>