force-app/main/default/objects/OrderItem/fields/Transfer_Price__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when Package Builder replace applied Transfer Price (monthly Discount / ListPrice / Final Adjusted Price copied onto the replacement). Used on undo to decide full term map-back vs Discount-only.</description>
    <label>Transfer Price</label>
    <type>Checkbox</type>
</CustomField>